# second-candidate

./: .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  README.md  index.html  params.json
cmake/: build_tests.cmake
data/: README.md
doc/: config.doxygen
include/: bucket.h  encoder.h  evaluation.h  multi_query.h  quantizer.h  query.h  sc_algorithm.h  sc_encoder.h  sc_quantizer.h  sc_query.h  sc_utilities.h
lib/simple-cluster/: CMakeLists.txt
scripts/: build.sh
src/: bucket.cpp  encoder.cpp  evaluation.cpp  multi_query.cpp  quantizer.cpp  query.cpp  sc_algorithm.cpp  sc_encoder.cpp  sc_quantizer.cpp  sc_query.cpp  sc_utilities.cpp
test/: query_sc.cpp  test_algorithm.cpp  test_encoder.cpp  test_evaluation.cpp  test_hash.cpp  test_multi_query.cpp  test_openblas.cpp  test_quantizer.cpp  test_query.cpp  test_queue.cpp  test_sc_encoder.cpp  test_sc_quantizer.cpp  test_sc_query.cpp  test_sc_utilities.cpp
